--- a/Dockerfile-gz-h
+++ b/Dockerfile-gz-h
@@ -3,5 +3,6 @@ FROM copter-4.5.0:5
 COPY ./get-gz-harmonic.sh /home/ardupilot/get-gz-harmonic.sh
 RUN ls ~
 RUN . ~/get-gz-harmonic.sh
+RUN . ~/get-ap_gz-harmonic.sh
 
-
+RUN . ~/.bashrc
